objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs.</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Segment__c</fullName>
        <description>Used to identify what segment a campaign belongs to.</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Hospital and Health System</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physician/Hospital</fullName>
                </value>
                <value>
                    <fullName>Referral Agent</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Attribution_SyncType__c</fullName>
        <defaultValue>&quot;Exclude all Campaign Members&quot;</defaultValue>
        <description>Choose which criteria to use Campaign Members as Bizible Touchpoints. This should be used for offline touchpoints only.</description>
        <inlineHelpText>Choose which criteria to use Campaign Members as Bizible Touchpoints. This should be used for offline touchpoints only.</inlineHelpText>
        <label>Enable Bizible Touchpoints</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include all Campaign Members</fullName>
                </value>
                <value>
                    <fullName>Include only &quot;Responded&quot; Campaign Members</fullName>
                </value>
                <value>
                    <fullName>Exclude all Campaign Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_End_Date__c</fullName>
        <description>The end date when Bizible should stop including Campaign Members for touchpoints</description>
        <inlineHelpText>The end date when Bizible should stop including Campaign Members for touchpoints</inlineHelpText>
        <label>Touchpoint End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Start_Date__c</fullName>
        <description>The start date when Bizible should begin to enable Campaign Members for touchpoints</description>
        <inlineHelpText>The start date when Bizible should begin to enable Campaign Members for touchpoints</inlineHelpText>
        <label>Touchpoint Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bizible2__UniqueId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used internally by Bizible help track Campaigns</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>bizible2__Update_Bizible_Attribution_Rule</fullName>
        <active>false</active>
        <description>As of version 6.0, this rule is deprecated.</description>
        <errorConditionFormula>False</errorConditionFormula>
        <errorMessage>Deprecated rule</errorMessage>
    </validationRules>
</CustomObject>